# lebensmittel

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Lebensmittel.ipa  README.md  source.json
.github/workflows/: deploy-pages.yml
backend/: README.md  auth.go  config.go  database.go  database.py  go.mod  go.sum  main.go  main.py  middleware.go  models.go  models.py  pg_migrate.sql  pyproject.toml  websocket.go
backend/auth/: auth.go
backend/database/: database.go  migrations.go
backend/go/: README.md  database.go  go.sum  main.go  models.go  websocket.go
backend/handlers/: auth.go  grocery.go  group.go  invite.go  meal.go  receipt.go  user.go  utils.go
backend/middleware/: middleware.go
backend/models/: models.go
backend/websocket/: websocket.go
ios/Config/: Dev.xcconfig  Prod.xcconfig
ios/lebensmittel/: APIClient.swift  AppConfig.swift  AuthManager.swift  AuthSupport.swift  ConnectivityMonitor.swift  ContentView.swift  ErrorHandling.swift  GroceriesModel.swift  GroceriesView.swift  Info.plist  LocalStore.swift  MealsModel.swift  MealsView.swift  Models.swift  SessionManager.swift  ShoppingModel.swift  ShoppingView.swift  SyncEngine.swift  WebSocketManager.swift  lebensmittelApp.swift
ios/lebensmittel.xcodeproj/: project.pbxproj
ios/lebensmittel/models/: AuthMenuModel.swift  GroceriesModel.swift  GroupModel.swift  LoginModel.swift  Models.swift  (+3 more)
lebensmittel/: ContentView.swift  GroceriesView.swift  MealsView.swift  Models.swift
lebensmittel.xcodeproj/: project.pbxproj
source/: Lebensmittel.ipa  index.html  privacy.html  source.json  styles.css
(+25 files in other folders)
