[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "sqlalchemy>=2.0.25",
    "flask-sqlalchemy>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.3.2",
    "python-socketio>=5.8.0",
    "eventlet>=0.33.0",
    "dotenv>=0.9.9",
]
